# nomad-bayesian-optimization

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_bayesian_optimization/apps/: __init__.py  tasks.py
src/nomad_bayesian_optimization/example_uploads/: __init__.py
src/nomad_bayesian_optimization/example_uploads/getting_started/: archive.json  example.py  notebook.ipynb  tutorial.ipynb
src/nomad_bayesian_optimization/example_uploads/optimization_tasks/: archive.json  example1.archive.json  example2.archive.json  example3.archive.json  example4.archive.json  example5.archive.json
src/nomad_bayesian_optimization/nomad_bayesian_optimization.example_uploads:multiple_online_files/: install.html
src/nomad_bayesian_optimization/schema_packages/: __init__.py  bayesian_optimization.py  experiments.py  jobs.py
tests/apps/: test_app.py  test_tasks.py
tests/data/: test.archive.yaml
tutorial/: tutorial.html
