[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
name = "nomad-bayesian-optimization"
description = "NOMAD plugin for driving experiments/simulations using bayesian optimization"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "Lauri Himanen", email = "lauri.himanen@physik.hu-berlin.de" },
]
maintainers = [
    { name = "Lauri Himanen", email = "lauri.himanen@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "baybe",
    "structlog",
]

[project.urls]
Repository = "https://github.com/lauri-codes/nomad-bayesian-optimization"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
"nomad_bayesian_optimization.apps:bayesian_optimization_tasks" = "nomad_bayesian_optimization.apps:bayesian_optimization_tasks"
"nomad_bayesian_optimization.schema_packages:experiments" = "nomad_bayesian_optimization.schema_packages:experiments"
"nomad_bayesian_optimization.schema_packages:bayesian_optimization" = "nomad_bayesian_optimization.schema_packages:bayesian_optimization"
#"nomad_bayesian_optimization.schema_packages:jobs" = "nomad_bayesian_optimization.schema_packages:jobs"
#"nomad_bayesian_optimization.example_uploads:getting_started" = "nomad_bayesian_optimization.example_uploads:getting_started"
#"nomad_bayesian_optimization.example_uploads:optimization_tasks" = "nomad_bayesian_optimization.example_uploads:optimization_tasks"
"nomad_bayesian_optimization.example_uploads:file" = "nomad_bayesian_optimization.example_uploads:file"
"nomad_bayesian_optimization.example_uploads:file_target" = "nomad_bayesian_optimization.example_uploads:file_target"
"nomad_bayesian_optimization.example_uploads:folder" = "nomad_bayesian_optimization.example_uploads:folder"
"nomad_bayesian_optimization.example_uploads:folder_contents" = "nomad_bayesian_optimization.example_uploads:folder_contents"
"nomad_bayesian_optimization.example_uploads:zip_unpack" = "nomad_bayesian_optimization.example_uploads:zip_unpack"
"nomad_bayesian_optimization.example_uploads:multiple_files" = "nomad_bayesian_optimization.example_uploads:multiple_files"
"nomad_bayesian_optimization.example_uploads:zip_online_unpack" = "nomad_bayesian_optimization.example_uploads:zip_online_unpack"
"nomad_bayesian_optimization.example_uploads:multiple_online_files" = "nomad_bayesian_optimization.example_uploads:multiple_online_files"
